finishing the buttons section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </a>
         <a href="#btns">
             <div><img src="./media/95-icons/Painting.ico" alt="Painting icon">
-                <p>Buttons</p></div>
+                <p>Fancy buttons</p></div>
         </a>
         <a href="#projects">
             <div><img src="./media/95-icons/Folder.ico" alt="Folder icon">
@@ -173,7 +173,7 @@
                 </div>
                 <section class="field-row" style="justify-content: flex-end">
                     <form action="hyperlinks.html">
-                        <input type="submit" value="Hyperlinks" />
+                        <input type="submit" value="Hyperlinks"/>
                     </form>
                 </section>
                 <div class="field-row-stacked" style="width: 100%">
@@ -199,7 +199,7 @@ I probably forgot to put some stuff and I will likely update this.
 </div>
 <div class="window" id="btns">
     <div class="title-bar inactive">
-        <div class="title-bar-text">buttons</div>
+        <div class="title-bar-text">Fancy buttons</div>
         <div class="title-bar-controls">
             <button aria-label="Minimize"></button>
             <button aria-label="Maximize"></button>
@@ -207,165 +207,173 @@ I probably forgot to put some stuff and I will likely update this.
         </div>
     </div>
     <div class="window-body">
-        <picture>
-            <img class="btn" src="https://boxy.neocities.org/images/sucks2.gif" alt="this website sucks">
-        </picture>
+        <menu role="tablist">
+            <li role="tab" aria-selected="true" aria-controls="buttons"><span aria-controls="buttons"
+                                                                              style="cursor: default">Buttons</span>
+            </li>
+            <li role="tab" aria-controls="my-button"><span aria-controls="my-button"
+                                                           style="cursor: default">My button</span></li>
+        </menu>
+        <div class="window" role="tabpanel" id="buttons">
+            <div class="window-body">
+                <picture>
+                    <img class="btn" src="https://boxy.neocities.org/images/sucks2.gif" alt="this website sucks">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://unnick.mice.tel/buttons/fucks.webp" alt="this website fucks">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://unnick.mice.tel/buttons/fucks.webp" alt="this website fucks">
+                </picture>
 
-        <a href="https://ublockorigin.com/">
-            <picture>
-                <img class="btn" src="https://sneexy.pages.gay/assets/buttons/software/ublockoriginnow.png"
-                     alt="uBlock Origin Now!">
-            </picture>
-        </a>
+                <a href="https://ublockorigin.com/">
+                    <picture>
+                        <img class="btn" src="https://sneexy.pages.gay/assets/buttons/software/ublockoriginnow.png"
+                             alt="uBlock Origin Now!">
+                    </picture>
+                </a>
 
-        <a href="https://www.mozilla.org/en-US/firefox/new">
-            <picture>
-                <img class="btn" src="https://sneexy.pages.gay/assets/buttons/software/getfirefox.gif"
-                     alt="Get Firefox">
-            </picture>
-        </a>
+                <a href="https://www.mozilla.org/en-US/firefox/new">
+                    <picture>
+                        <img class="btn" src="https://sneexy.pages.gay/assets/buttons/software/getfirefox.gif"
+                             alt="Get Firefox">
+                    </picture>
+                </a>
 
-        <a href="http://kmeleonbrowser.org/">
-            <picture>
-                <img class="btn" src="https://cyber.dabamos.de/88x31/KMeleon-Red%20Now_Ani.gif" alt="K-Meleon Now!">
-            </picture>
-        </a>
+                <a href="http://kmeleonbrowser.org/">
+                    <picture>
+                        <img class="btn" src="https://cyber.dabamos.de/88x31/KMeleon-Red%20Now_Ani.gif"
+                             alt="K-Meleon Now!">
+                    </picture>
+                </a>
 
-        <picture>
-            <img class="btn" src="https://itzzcode.github.io/assets/images/badges/anythingbut.gif"
-                 alt="Anything but Chrome">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://itzzcode.github.io/assets/images/badges/anythingbut.gif"
+                         alt="Anything but Chrome">
+                </picture>
 
-        <a href="https://joinmastodon.org/">
-            <picture>
-                <img class="btn" src="https://itzzcode.github.io/assets/images/badges/neo-fedi.gif"
-                     alt="Join the Fediverse!!!">
-            </picture>
-        </a>
+                <a href="https://joinmastodon.org/">
+                    <picture>
+                        <img class="btn" src="https://itzzcode.github.io/assets/images/badges/neo-fedi.gif"
+                             alt="Join the Fediverse!!!">
+                    </picture>
+                </a>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/686-1.gif" alt="Che Guevara">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/686-1.gif" alt="Che Guevara">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/akmmos_ban.gif" alt="161">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/akmmos_ban.gif" alt="161">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/amd_powered.gif" alt="powered by AMD">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/amd_powered.gif" alt="powered by AMD">
+                </picture>
 
-        <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
-            <picture>
-                <img class="btn" src="https://upload.wikimedia.org/wikipedia/commons/5/55/Cc_by-nc-sa_euro_icon.svg"
-                     alt="CC BY-NC-SA 4.0">
-            </picture>
-        </a>
+                <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                    <picture>
+                        <img class="btn"
+                             src="https://upload.wikimedia.org/wikipedia/commons/5/55/Cc_by-nc-sa_euro_icon.svg"
+                             alt="CC BY-NC-SA 4.0">
+                    </picture>
+                </a>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/shareo.gif" alt="share online">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/shareo.gif" alt="share online">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/stop.gif" alt="Windows stop">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/stop.gif" alt="Windows stop">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/acab.gif" alt="A.C.A.B">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/acab.gif" alt="A.C.A.B">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/anarchy-now.gif" alt="Get Anarchy Now!">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/anarchy-now.gif" alt="Get Anarchy Now!">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/button25.gif" alt="pride">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/button25.gif" alt="pride">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/penguins.gif" alt="Powered by: Penguins">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/penguins.gif" alt="Powered by: Penguins">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/piracy.gif" alt="Piracy Now!">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/piracy.gif" alt="Piracy Now!">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/powered.gif" alt="this site is powered by imagination">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/powered.gif"
+                         alt="this site is powered by imagination">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/proweb.gif" alt="Professional Web Design">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/proweb.gif" alt="Professional Web Design">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/publicdomain.gif" alt="Public Domain">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/publicdomain.gif" alt="Public Domain">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/rainbow_bev.gif" alt="pride">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/rainbow_bev.gif" alt="pride">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/rkrp-sverdlovsk-88x31.gif" alt="i dont speak russian">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/rkrp-sverdlovsk-88x31.gif"
+                         alt="i dont speak russian">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/rlinux.gif" alt="Revista Linux Online">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/rlinux.gif" alt="Revista Linux Online">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://cyber.dabamos.de/88x31/retrosite.gif" alt="Retro site">
-        </picture>
+                <picture>
+                    <img class="btn" src="https://cyber.dabamos.de/88x31/retrosite.gif" alt="Retro site">
+                </picture>
 
-        <picture>
-            <img class="btn" src="https://boxy.neocities.org/images/ffox.webp" alt="Take back the web">
-        </picture>
-    </div>
-</div>
-<div class="window" id="my-btn">
-    <div class="title-bar inactive">
-        <div class="title-bar-text">buttons</div>
-        <div class="title-bar-controls">
-            <button aria-label="Minimize"></button>
-            <button aria-label="Maximize"></button>
-            <button aria-label="Close"></button>
+                <picture>
+                    <img class="btn" src="https://boxy.neocities.org/images/ffox.webp" alt="Take back the web">
+                </picture>
+            </div>
+        </div>
+        <div class="window" role="tabpanel" id="my-button" hidden>
+            <div class="window-body">
+                My button. You can add it to your website if you want uwu
+                <a href="./media/88x31.png">
+                    <picture>
+                        <source srcset="./media/88x31.webp 1x" type="image/webp">
+                        <img class="btn" src="./media/88x31.png" alt="">
+                    </picture>
+                </a>
+                <ul class="tree-view" id="impl-my-btn">
+                    &lt;a href="https://me.opencodespace.org"&gt;
+                    <blockquote>&lt;picture&gt;</blockquote>
+                    <blockquote>
+                        <blockquote>&lt;source srcset="https://me.opencodespace.org/media/88x31.webp" type="image/webp"&gt;
+                        </blockquote>
+                    </blockquote>
+                    <blockquote>
+                        <blockquote>&lt;img src="https://me.opencodespace.org/media/88x31.png" width="88" height="31"
+                            alt="wyatt"&gt;
+                        </blockquote>
+                    </blockquote>
+                    <blockquote>&lt;/picture&gt;</blockquote>
+                    &lt;/a&gt;
+                </ul>
+                <section class="field-row" style="justify-content: flex-end">
+                    <button onclick='(function(){navigator.clipboard.writeText(document.getElementById("impl-my-btn").textContent)})(); return false;'>
+                        Copy code
+                    </button>
+                </section>
+            </div>
         </div>
     </div>
-    <div class="window-body">
-        My button. You can add it to your website if you want uwu
-        <a href="./media/88x31.png">
-            <picture>
-                <source srcset="./media/88x31.webp 1x" type="image/webp">
-                <img class="btn" src="./media/88x31.png" alt="">
-            </picture>
-        </a>
-        <ul class="tree-view" id="impl-my-btn">
-            &lt;a href="https://me.opencodespace.org"&gt;
-            <blockquote>&lt;picture&gt;</blockquote>
-            <blockquote>
-                <blockquote>&lt;source srcset="https://me.opencodespace.org/media/88x31.webp" type="image/webp"&gt;
-                </blockquote>
-            </blockquote>
-            <blockquote>
-                <blockquote>&lt;img src="https://me.opencodespace.org/media/88x31.png" width="88" height="31"
-                    alt="wyatt"&gt;
-                </blockquote>
-            </blockquote>
-            <blockquote>&lt;/picture&gt;</blockquote>
-            &lt;/a&gt;
-        </ul>
-        <section class="field-row" style="justify-content: flex-end">
-            <button onclick='(function(){navigator.clipboard.writeText(document.getElementById("impl-my-btn").textContent)})(); return false;'>
-                Copy code
-            </button>
-        </section>
-    </div>
 </div>
+
 <details id="penguins">
     <summary>I also really like penguins :3</summary>
     <img src="./media/club-penguin.gif" alt="club penguin">
@@ -475,67 +483,62 @@ I probably forgot to put some stuff and I will likely update this.
     startTime();
 </script>
 <script>
-    window.addEventListener("DOMContentLoaded", () => {
-        // Only handle one particular tablist; if you have multiple tab
-        // lists (might even be nested), you have to apply this code for each one
-        const tabList = document.querySelector('[role="tablist"]');
-        const tabs = tabList.querySelectorAll(':scope > [role="tab"]');
+    const tabs = document.querySelectorAll("menu[role=tablist]");
 
-        // Add a click event handler to each tab
-        tabs.forEach((tab) => {
-            tab.addEventListener("click", changeTabs);
-        });
+    for (let i = 0; i < tabs.length; i++) {
+        const tab = tabs[i];
 
-        // Enable arrow navigation between tabs in the tab list
-        let tabFocus = 0;
+        const tabListPoints = tab.querySelectorAll("menu[role=tablist] > li");
+        const tabSpans = Array.prototype.slice.call(tab.querySelectorAll("menu[role=tablist] > li > span"));
 
-        tabList.addEventListener("keydown", (e) => {
-            // Move right
-            if (e.key === "ArrowRight" || e.key === "ArrowLeft") {
-                tabs[tabFocus].setAttribute("tabindex", -1);
-                if (e.key === "ArrowRight") {
-                    tabFocus++;
-                    // If we're at the end, go to the start
-                    if (tabFocus >= tabs.length) {
-                        tabFocus = 0;
+        tabSpans.forEach((span) =>
+            span.addEventListener("click", (e) => {
+                e.preventDefault();
+
+                tabSpans.forEach((span) => {
+                    const tabListPoint = tabListPoints[tabSpans.indexOf(span)];
+
+                    if (
+                        tabListPoint.getAttribute("aria-controls") ===
+                        e.target.getAttribute("aria-controls")
+                    ) {
+                        tabListPoint.setAttribute("aria-selected", true);
+                        openTab(e, tab);
+                    } else {
+                        tabListPoint.setAttribute("aria-selected", false);
                     }
-                    // Move left
-                } else if (e.key === "ArrowLeft") {
-                    tabFocus--;
-                    // If we're at the start, move to the end
-                    if (tabFocus < 0) {
-                        tabFocus = tabs.length - 1;
+                });
+            })
+        );
+
+        tabListPoints.forEach((listPoint) =>
+            listPoint.addEventListener("click", (e) => {
+                e.preventDefault();
+
+                tabListPoints.forEach((listPoint) => {
+                    if (
+                        listPoint.getAttribute("aria-controls") ===
+                        e.target.getAttribute("aria-controls")
+                    ) {
+                        listPoint.setAttribute("aria-selected", true);
+                        openTab(e, tab);
+                    } else {
+                        listPoint.setAttribute("aria-selected", false);
                     }
-                }
+                });
+            })
+        );
+    }
 
-                tabs[tabFocus].setAttribute("tabindex", 0);
-                tabs[tabFocus].focus();
-            }
+    function openTab(event, tab) {
+        const articles = tab.parentNode.querySelectorAll('[role="tabpanel"]');
+        articles.forEach((p) => {
+            p.setAttribute("hidden", true);
         });
-    });
-
-    function changeTabs(e) {
-        const targetTab = e.target;
-        const tabList = targetTab.parentNode;
-        const tabGroup = tabList.parentNode;
-
-        // Remove all current selected tabs
-        tabList
-            .querySelectorAll(':scope > [aria-selected="true"]')
-            .forEach((t) => t.setAttribute("aria-selected", false));
-
-        // Set this tab as selected
-        targetTab.setAttribute("aria-selected", true);
-
-        // Hide all tab panels
-        tabGroup
-            .querySelectorAll(':scope > [role="tabpanel"]')
-            .forEach((p) => p.setAttribute("hidden", true));
-
-        // Show the selected panel
-        tabGroup
-            .querySelector(`#${targetTab.getAttribute("aria-controls")}`)
-            .removeAttribute("hidden");
+        const article = tab.parentNode.querySelector(
+            `[role="tabpanel"]#${event.target.getAttribute("aria-controls")}`
+        );
+        article.removeAttribute("hidden");
     }
 
 </script>
