finishing the penguins section

--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
             <div><img src="./media/95-icons/Painting.ico" alt="Painting icon">
                 <p>Fancy buttons</p></div>
         </a>
-        <a href="#projects">
-            <div><img src="./media/95-icons/Folder.ico" alt="Folder icon">
-                <p>Projects</p></div>
-        </a>
         <hr>
         <a href="hyperlinks.html">
             <div><img src="./media/95-icons/Turn%20Off%20Computer%20(display%20only).ico" alt="Computer icon">
@@ -413,7 +409,8 @@ I probably forgot to put some stuff and I will likely update this.
                                     <ul>
                                         <li>
                                             <details id="penguin-files" open>
-                                                <summary><img src="./media/95-icons/Opened%20Folder.ico">penguin :3</summary>
+                                                <summary><img src="./media/95-icons/Opened%20Folder.ico">penguin :3
+                                                </summary>
                                                 <ul id="fileViewerImages">
                                                     <li aria-selected="true" id="club-penguin">club-penguin.gif</li>
                                                     <li id="tux">tux.png</li>
@@ -435,54 +432,56 @@ I probably forgot to put some stuff and I will likely update this.
         </div>
     </div>
 </div>
-<details>
-    <summary>I also really like penguins :3</summary>
-    <img src="./media/club-penguin.gif" alt="club penguin">
-    <img src="https://www.pc-freak.net/pictures/penguins/tux_huge.png" alt="tux">
-    <img src="https://i.natgeofe.com/n/9dce4946-8f87-4d16-acd7-f14b1ef7e12c/emperor-penguin_01_square.jpg"
-         alt="real penguins">
-</details>
-<details id="projects">
-    <summary>projects</summary>
-
-</details>
-<details id="hosting">
-    <summary>hosting</summary>
-
-</details>
-<details id="credits">
-    <summary>credits</summary>
-    I took design inspiration from blogs and webpages by other people.<br>
-    I find it most important to credit other people for there ideas and work.
-    <h2>Credits for the buttons</h2>
-    <ul>
-        <li>This Website sucks: from <a href="https://boxy.neocities.org">https://boxy.neocities.org</a></li>
-        <li>This Website fucks: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a></li>
-        <li>Get Firefox, Get uBlock Origin: from <a href="https://sneexy.pages.gay">https://sneexy.pages.gay</a>
-        </li>
-        <li>K-Meleon Now!, Che Guevara, 161, Powered by AMD, Share-Online,<br>
-            Windows Stop, A.C.A.B, Get Anarchy Now!, pride, Powered by Penguins,<br>
-            Piracy Now!, this site is powered by imagination, Professional Web Design,<br>
-            Public Domain, i dont speak russian, Revista Linux Online, Retro site:<br>
-            from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
-        <li>Anything but Chrome, Join the Fediverse!!!: from <a href="https://itzzcode.github.io">https://itzzcode.github.io</a>
-        </li>
-        <li>CC BY-NC-SA 4.0: from <a href="https://upload.wikimedia.org">https://upload.wikimedia.org</a></li>
-    </ul>
-    <h2>Credits for the design inspo</h2>
-    <ul>
-        <li>Background: from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
-        <li>Layout: from <a href="https://itzzcode.github.io/">https://itzzcode.github.io/</a></li>
-        <li>Design: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a>, <a href="https://derg.net">https://derg.net</a>
-        </li>
-    </ul>
-    <h2>Images</h2>
-    <ul>
-        <li>Computer: from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
-        <li>Tux: from <a href="https://www.pc-freak.net">https://www.pc-freak.net</a></li>
-        <li>real penguins: from <a href="https://i.natgeofe.com">https://i.natgeofe.com</a></li>
-    </ul>
-</details>
+<div class="window" id="credits">
+    <div class="title-bar inactive">
+        <div class="title-bar-text">Welcome to www.opencodespace.org!</div>
+        <div class="title-bar-controls">
+            <button aria-label="Minimize"></button>
+            <button aria-label="Maximize"></button>
+            <button aria-label="Close"></button>
+        </div>
+    </div>
+    <div class="window-options">
+        <div class="window-options-point">File</div>
+        <div class="window-options-point">Edit</div>
+        <div class="window-options-point">View</div>
+        <div class="window-options-point">Options</div>
+        <div class="window-options-point">Help</div>
+    </div>
+    <div class="window-body">
+        I took design inspiration from blogs and webpages by other people.<br>
+        I find it most important to credit other people for there ideas and work.
+        <h2>Credits for the buttons</h2>
+        <ul>
+            <li>This Website sucks: from <a href="https://boxy.neocities.org">https://boxy.neocities.org</a></li>
+            <li>This Website fucks: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a></li>
+            <li>Get Firefox, Get uBlock Origin: from <a href="https://sneexy.pages.gay">https://sneexy.pages.gay</a>
+            </li>
+            <li>K-Meleon Now!, Che Guevara, 161, Powered by AMD, Share-Online,<br>
+                Windows Stop, A.C.A.B, Get Anarchy Now!, pride, Powered by Penguins,<br>
+                Piracy Now!, this site is powered by imagination, Professional Web Design,<br>
+                Public Domain, i dont speak russian, Revista Linux Online, Retro site:<br>
+                from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
+            <li>Anything but Chrome, Join the Fediverse!!!: from <a href="https://itzzcode.github.io">https://itzzcode.github.io</a>
+            </li>
+            <li>CC BY-NC-SA 4.0: from <a href="https://upload.wikimedia.org">https://upload.wikimedia.org</a></li>
+        </ul>
+        <h2>Credits for the design inspo</h2>
+        <ul>
+            <li>Background: from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
+            <li>Layout: from <a href="https://itzzcode.github.io/">https://itzzcode.github.io/</a></li>
+            <li>Design: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a>, <a href="https://derg.net">https://derg.net</a>
+            </li>
+        </ul>
+        <h2>Design</h2>
+        For the Windows 95/98 style I am using a css library called <a href="https://jdan.github.io/98.css">98.css</a>
+        <h2>Images</h2>
+        <ul>
+            <li>Tux: from <a href="https://www.pc-freak.net">https://www.pc-freak.net</a></li>
+            <li>real penguins: from <a href="https://i.natgeofe.com">https://i.natgeofe.com</a></li>
+        </ul>
+    </div>
+</div>
 <span id="license">
     This website is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons BY-NC-SA 4.0</a>. All assets share this license. <br>
 </span>
