--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ I probably forgot to put some stuff and I will likely update this.
 </div>
 <div class="window" id="credits">
     <div class="title-bar inactive">
-        <div class="title-bar-text">Welcome to www.opencodespace.org!</div>
+        <div class="title-bar-text">Credits</div>
         <div class="title-bar-controls">
             <button aria-label="Minimize"></button>
             <button aria-label="Maximize"></button>
@@ -449,37 +449,49 @@ I probably forgot to put some stuff and I will likely update this.
         <div class="window-options-point">Help</div>
     </div>
     <div class="window-body">
-        I took design inspiration from blogs and webpages by other people.<br>
-        I find it most important to credit other people for there ideas and work.
-        <h2>Credits for the buttons</h2>
-        <ul>
-            <li>This Website sucks: from <a href="https://boxy.neocities.org">https://boxy.neocities.org</a></li>
-            <li>This Website fucks: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a></li>
-            <li>Get Firefox, Get uBlock Origin: from <a href="https://sneexy.pages.gay">https://sneexy.pages.gay</a>
+        <menu role="tablist">
+            <li role="tab" aria-selected="true" aria-controls="buttons-credits"><span aria-controls="buttons-credits"
+                                                                                      style="cursor: default">Buttons</span>
             </li>
-            <li>K-Meleon Now!, Che Guevara, 161, Powered by AMD, Share-Online,<br>
-                Windows Stop, A.C.A.B, Get Anarchy Now!, pride, Powered by Penguins,<br>
-                Piracy Now!, this site is powered by imagination, Professional Web Design,<br>
-                Public Domain, i dont speak russian, Revista Linux Online, Retro site:<br>
-                from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
-            <li>Anything but Chrome, Join the Fediverse!!!: from <a href="https://itzzcode.github.io">https://itzzcode.github.io</a>
-            </li>
-            <li>CC BY-NC-SA 4.0: from <a href="https://upload.wikimedia.org">https://upload.wikimedia.org</a></li>
-        </ul>
-        <h2>Credits for the design inspo</h2>
-        <ul>
-            <li>Background: from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
-            <li>Layout: from <a href="https://itzzcode.github.io/">https://itzzcode.github.io/</a></li>
-            <li>Design: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a>, <a href="https://derg.net">https://derg.net</a>
-            </li>
-        </ul>
-        <h2>Design</h2>
-        For the Windows 95/98 style I am using a css library called <a href="https://jdan.github.io/98.css">98.css</a>
-        <h2>Images</h2>
-        <ul>
-            <li>Tux: from <a href="https://www.pc-freak.net">https://www.pc-freak.net</a></li>
-            <li>real penguins: from <a href="https://i.natgeofe.com">https://i.natgeofe.com</a></li>
-        </ul>
+            <li role="tab" aria-controls="design"><span aria-controls="design"
+                                                        style="cursor: default">Design</span></li>
+            <li role="tab" aria-controls="images"><span aria-controls="images"
+                                                        style="cursor: default">Images</span></li>
+        </menu>
+        <div class="window" role="tabpanel" id="buttons-credits">
+            <ul>
+                <li>This Website sucks: from <a href="https://boxy.neocities.org">https://boxy.neocities.org</a></li>
+                <li>This Website fucks: from <a href="https://unnick.mice.tel">https://unnick.mice.tel</a></li>
+                <li>Get Firefox, Get uBlock Origin: from <a href="https://sneexy.pages.gay">https://sneexy.pages.gay</a>
+                </li>
+                <li>K-Meleon Now!, Che Guevara, 161, Powered by AMD, Share-Online,<br>
+                    Windows Stop, A.C.A.B, Get Anarchy Now!, pride, Powered by Penguins,<br>
+                    Piracy Now!, this site is powered by imagination, Professional Web Design,<br>
+                    Public Domain, i dont speak russian, Revista Linux Online, Retro site:<br>
+                    from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a></li>
+                <li>Anything but Chrome, Join the Fediverse!!!: from <a href="https://itzzcode.github.io">https://itzzcode.github.io</a>
+                </li>
+                <li>CC BY-NC-SA 4.0: from <a href="https://upload.wikimedia.org">https://upload.wikimedia.org</a></li>
+            </ul>
+        </div>
+        <div class="window" role="tabpanel" id="design" hidden>
+            <ul>
+                For the Windows 95/98 style I am using a css library called <a
+                    href="https://jdan.github.io/98.css">98.css</a>
+                The Background Image is from <a href="https://cyber.dabamos.de">https://cyber.dabamos.de</a>
+                (technically an
+                Image, maybe I should put it in the images tab?)
+            </ul>
+        </div>
+        <div class="window" role="tabpanel" id="images" hidden>
+            <ul>
+                <li>Club Penguin: I honestly don't know. He's been lying around in my files since before Windows 98 came
+                    out.
+                </li>
+                <li>Tux: from <a href="https://www.pc-freak.net">https://www.pc-freak.net</a></li>
+                <li>real penguins: from <a href="https://i.natgeofe.com">https://i.natgeofe.com</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <span id="license">
