#1 interest my gf

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                     <fieldset>
                         <legend>Interests</legend>
                         <div class="field-row">
+                            <input disabled checked type="radio" id="my-gf">
+                            <label for="my-gf">#1 my girlfriend</label>
+                        </div>
+                        <div class="field-row">
                             <input disabled checked type="radio" id="tech">
                             <label for="tech">tech</label>
                         </div>
